# EDPR-APRIL

./: .gitignore  CMakeLists.txt  Dockerfile  README.MD  README.md  cam_april.sh  compose.yml  create_alias.sh  docker-compose.yml  edpr-april.cpp  kill_april.sh  run_april.sh  velocity_grid.cpp  yarpapp_demo.xml
april_msgs/: Emergency.h  Emergency.msg  NChumanPose.h  NChumanPose.msg
april_msgs/yarp/rosmsg/april_msgs/: Emergency.h  NChumanPose.h
april_msgs/yarp/rosmsg/std_msgs/: Header.h
code/: CMakeLists.txt  pose_detector.cpp  pose_detector_json.cpp  test.cpp
docker/: Dockerfile  docker-compose.yml
docker/entrypoints/: run_atis_bridge.sh  run_movenet.sh  run_yarpserver.sh
energy_study/: Readme.md
experiments/: velocity_grid.cpp
fault_button/calibrations/: latest_calibration.txt  uc1_asin_calibration.txt  uc2_osai_calibration.txt  uc3_incm_calibration.txt  uc5_slvr_calibration.txt  uc6_ines2_calibration.txt  uc6_ines_calibration.txt
fault_button/cpp/: CMakeLists.txt  vfb.cpp
fault_button/eventrate_test/: accuracy_combined.ipynb  automatic_threshold.ipynb  combined_plots.ipynb  detection_latency.ipynb  detection_thresh.ipynb  display_rate.ipynb  display_rate.py  test_roi_scale.ipynb  test_tres.ipynb
fault_button/eventrate_test/src/: utils.py
openpose_pilot/: .gitignore
openpose_pilot/code/: CMakeLists.txt
yarp/rosmsg/: Vjxoutput.h
yarpless/: CMakeLists.txt  erosdirect.h  eventhpe.cpp
